[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Menus/2-3.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/Menus/7-1.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Menus/cave.jpg" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Menus/7-3.png" type="Texture2D" id=6]
[ext_resource path="res://Sprites/Menus/new_theme.tres" type="Theme" id=7]
[ext_resource path="res://Sprites/Menus/7-2.png" type="Texture2D" id=8]
[ext_resource path="res://Scripts/Registro.gd" type="Script" id=9]

[node name="Registro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 9 )

[node name="Cave" type="Sprite2D" parent="."]
position = Vector2( -346, -421 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 5 )
offset = Vector2( 901.25, 952.812 )

[node name="Contenedor" type="Sprite2D" parent="."]
position = Vector2( 527, 317 )
texture = ExtResource( 1 )

[node name="Titulo" type="Label" parent="Contenedor"]
offset_left = -117.0
offset_top = -241.0
offset_right = 116.0
offset_bottom = -173.0
text = "REGISTRO"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Usuario" type="LineEdit" parent="Contenedor"]
offset_left = -103.0
offset_top = -160.0
offset_right = 104.0
offset_bottom = -127.0
clear_button_enabled = true
placeholder_text = "Crea tu usuario"
caret_blink = true

[node name="Label" type="Label" parent="Contenedor/Usuario"]
offset_left = 2.0
offset_top = -28.0
offset_right = 42.0
offset_bottom = -5.0
text = "Usuario:"

[node name="btnRegistrar" type="TextureButton" parent="Contenedor"]
offset_left = -90.0
offset_top = 130.0
offset_right = 90.0
offset_bottom = 170.0
pivot_offset = Vector2( -444, -182 )
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )

[node name="Label" type="Label" parent="Contenedor/btnRegistrar"]
offset_left = -2.0
offset_top = -2.0
offset_right = 177.0
offset_bottom = 32.0
text = "Registrar"
align = 1
valign = 1
autowrap = true

[node name="Contrasena" type="LineEdit" parent="Contenedor"]
offset_left = -103.0
offset_top = -35.0
offset_right = 105.0
offset_bottom = -2.0
secret = true
placeholder_text = "Crea tu contrasena"

[node name="Label" type="Label" parent="Contenedor/Contrasena"]
offset_top = -25.0
offset_right = 116.0
offset_bottom = -1.0
text = "Contrasena:"

[node name="btnVolver" type="TextureButton" parent="Contenedor"]
offset_left = -89.0
offset_top = 183.0
offset_right = 91.0
offset_bottom = 223.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )

[node name="Label" type="Label" parent="Contenedor/btnVolver"]
offset_left = -2.0
offset_top = -2.0
offset_right = 177.0
offset_bottom = 32.0
text = "Menu"
align = 1
valign = 1
autowrap = true

[node name="Avisos" type="Label" parent="Contenedor"]
offset_left = -101.0
offset_top = 3.0
offset_right = 107.0
offset_bottom = 113.0
align = 1
valign = 1
autowrap = true

[node name="Correo" type="LineEdit" parent="Contenedor"]
offset_left = -103.0
offset_top = -98.0
offset_right = 104.0
offset_bottom = -65.0
clear_button_enabled = true
placeholder_text = "Pon tu correo"
caret_blink = true

[node name="Label" type="Label" parent="Contenedor/Correo"]
offset_left = 2.0
offset_top = -28.0
offset_right = 42.0
offset_bottom = -5.0
text = "Correo:"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 524, 307.5 )
zoom = Vector2( 0.9, 0.9 )

[connection signal="focus_entered" from="Contenedor/Usuario" to="." method="_on_Usuario_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/Usuario" to="." method="_on_Usuario_mouse_entered"]
[connection signal="focus_entered" from="Contenedor/btnRegistrar" to="." method="_on_btnRegistrar_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/btnRegistrar" to="." method="_on_btnRegistrar_mouse_entered"]
[connection signal="pressed" from="Contenedor/btnRegistrar" to="." method="_on_btnRegistrar_pressed"]
[connection signal="focus_entered" from="Contenedor/Contrasena" to="." method="_on_Contrasena_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/Contrasena" to="." method="_on_Contrasena_mouse_entered"]
[connection signal="focus_entered" from="Contenedor/btnVolver" to="." method="_on_btnVolver_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/btnVolver" to="." method="_on_btnVolver_mouse_entered"]
[connection signal="pressed" from="Contenedor/btnVolver" to="." method="_on_btnVolver_pressed"]
[connection signal="focus_entered" from="Contenedor/Correo" to="." method="_on_Correo_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/Correo" to="." method="_on_Correo_mouse_entered"]
